tests/NormalTests/paczka1/fuzzy1/31301740.err
Error in line 2: Aee3j S560 48,1
Error in line 3: Aee3j A684 9,3
Error in line 7: Aee3j S801 40,3
Error in line 12: Aee3j S484 58,0
Error in line 13: DcEw2cCI S484 81,9
Error in line 16: DcEw2cCI A684 91,5
Error in line 23: DcEw2cCI S560 55,0
